--- a/pwa-1-start/index.html
+++ b/pwa-1-start/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styles.css">
+
+    <meta name="description" content="Landing Page">
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Document</title>
 </head>
+
 <body>
-    <script src="assets/js/scripts.js"></script>
+    <h1>Starting Index</h1>
+    <script src="src/js/scripts.js"></script>
 </body>
+
 </html>
